--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,7 +17,7 @@ prometheus_alertmanager_url: 'localhost:9093'
 prometheus_global_scrape_interval: 15s
 prometheus_global_scrape_timeout: 10s
 prometheus_global_evaluation_interval: 15s
-
+prometheus_storage_local_target_heap_size: ""
 prometheus_config_flags_extra: {}
 
 prometheus_external_labels:
